--- a/style.css
+++ b/style.css
@@ -15,3 +15,10 @@
   padding: 5px 8px 6px 8px;
   border-radius: 5px;
 }
+
+
+.author-img{
+  height: 40px;
+  width: 40px;
+  border-radius: 75px;
+}
